--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <li><a href="actividad.html" class="no-ch">✏️Actividad</a></li>
    </ul>
    </li>
-   <li><a href="_creditos.html" class="no-ch">🪪 Creditos</a></li>
+   <li><a href="creditos.html" class="no-ch">🪪 Creditos</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
