--- a/ndice.html
+++ b/ndice.html
@@ -31,7 +31,7 @@
       <li><a href="actividad.html" class="no-ch">✏️Actividad</a></li>
    </ul>
    </li>
-   <li><a href="_creditos.html" class="no-ch">🪪 Creditos</a></li>
+   <li><a href="creditos.html" class="no-ch">🪪 Creditos</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
@@ -48,7 +48,7 @@
 <div class="exe-text"><p><a href="introduccin.html">📖INTRODUCCIÓN </a></p>
 <p><a href="descripcin_del_proyecto.html">📝DESCRIPCIÓN DEL PROYECTO </a></p>
 <p><a href="como_utilizar_wally.html">👩🏻‍💻COMO UTILIZAR A WALLY </a></p>
-<p><a href="_creditos.html">🪪CREDITOS</a></p></div>
+<p><a href="creditos.html">🪪CREDITOS</a></p></div>
 </div>
 </div>
 </article>
