--- a/creditos.html
+++ b/creditos.html
@@ -32,7 +32,7 @@
       <li><a href="actividad.html" class="no-ch">✏️Actividad</a></li>
    </ul>
    </li>
-   <li id="active"><a href="_creditos.html" class="active no-ch">🪪 Creditos</a></li>
+   <li id="active"><a href="creditos.html" class="active no-ch">🪪 Creditos</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
